--- a/titanic_survival_exploration/titanic_survival_exploration.html
+++ b/titanic_survival_exploration/titanic_survival_exploration.html
@@ -16583,7 +16583,12 @@ mRRPiinVAAAAAElFTkSuQmCC
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>问题4</strong>：请描述你实现80%准确度的预测模型所经历的步骤。您观察过哪些特征？某些特性是否比其他特征更有帮助？你用了什么条件来预测生还结果？你最终的预测的准确率是多少？</p>
-<p><strong>回答</strong>：<font color='red'>80.13%</font></p>
+<p><strong>回答</strong>：<br>
+根据前面的分析，女性的存活率远远高于男性。因此后面需要哪些因素影响了男性的存活率。<br>
+首先分析Pclass， 当Pclass=3时，男性的存活率只有14%，因此可以认为Pclass是影响男性存活率的一个特征；<br>
+其次，在剩下的数据中，即Sex=male， Pclass=1orPclass=2中，观察Age可以发现，Age≤10的男性全部活下来；<br>
+最后，再观察Fare，发现Fare&gt;500时，男性全部活下来。<br>
+综合以上的分析，观察Sex，Pclass，Age，Fare四个特征，可以得到预测结果<font color='red'>80.13%</font>。</p>
 <p><strong>提示</strong>：你需要在下面添加一个代码区域，实现代码并运行来计算准确率。</p>
 
 </div>
